# protobuf-cpp

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
include/protobuf-cpp/: Concepts.h  Deserialize.h  Deserialized.h  Encoding.h  Field.h  Fixed32.h  Fixint.h  Key.h  MemberTuples.h  Record.h  Serialize.h  Utils.h  Varint.h  Varlen.h  WireType.h  varint.h
include/stub/: stub.h
src/: CMakeLists.txt  Operators.cpp  Varint.cpp  stub.cpp  varint.cpp
test/: CMakeLists.txt  TestTypes.h  test_fixed32.cpp  test_fixint.cpp  test_payload.cpp  test_record.cpp  test_stub.cpp  test_trivial_struct.cpp  test_varint.cpp
test/proto/: example.proto
